# ghost_survive

./: CMakeLists.txt  hello
src/: Enemy.cpp  Enemy.h  background_main.cpp  background_main.h  main.cpp  player.cpp  player.h  scene_main.cpp  scene_main.h  spawner.cpp  spawner.h  weapon_thunder.cpp  weapon_thunder.h
src/affiliate/: affiliate_bar.cpp  affiliate_bar.h  collider.cpp  collider.h  sprite.cpp  sprite.h  spriteAnim.cpp  spriteAnim.h
src/core/: actor.cpp  actor.h  asset_store.cpp  asset_store.h  defs.h  game.cpp  game.h  object.cpp  object.h  object_affiliate.cpp  object_affiliate.h  object_screen.h  object_world.cpp  object_world.h  scene.cpp  scene.h
src/raw/: states.cpp  states.h  weapon.cpp  weapon.h
src/screen/: hud_states.cpp  hud_states.h  ui_mouse.cpp  ui_mouse.h
src/world/: effect.cpp  effect.h  spell.cpp  spell.h
